tests/fail/tuple_struct.rs
use openapi_type::OpenapiType;

#[derive(OpenapiType)]
struct Foo(i64, i64);

fn main() {}
