tests/fail/tuple_struct.stderr
error: #[derive(OpenapiType)] does not support tuple structs
 --> tests/fail/tuple_struct.rs:4:11
  |
4 | struct Foo(i64, i64);
  |           ^^^^^^^^^^
